// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`works on the fragment1 structure: Output 1`] = `
Object {
  "__typename": "Query",
  "listNested": Array [
    Object {
      "name": "A",
    },
  ],
}
`;

exports[`works on the fragment2 structure: Output 1`] = `
Object {
  "__typename": "Query",
  "listNested": Array [
    Object {
      "name": "A",
    },
    Object {
      "name": "A",
    },
  ],
}
`;

exports[`works on the list structure: Output 1`] = `
Object {
  "__typename": "Query",
  "list": Array [
    "A",
    "A",
  ],
}
`;

exports[`works on the listNested structure: Output 1`] = `
Object {
  "__typename": "Query",
  "listNested": Array [
    Object {
      "name": "A",
    },
    Object {
      "name": "A",
    },
  ],
}
`;

exports[`works on the listNestedNullable structure: Output 1`] = `
Object {
  "__typename": "Query",
  "listNestedNullable": null,
}
`;

exports[`works on the listNestedWithInput structure: Output 1`] = `
Object {
  "__typename": "Query",
  "listNested": Array [
    Object {
      "name": "A",
    },
    Object {
      "name": "A",
    },
  ],
}
`;

exports[`works on the listNestedWithInput structure: Variables 1`] = `
Object {
  "input": Object {
    "nested": Object {
      "nestedInput": "NESTEDINPUT",
    },
    "topInput": "TOPINPUT",
  },
}
`;

exports[`works on the nested structure: Output 1`] = `
Object {
  "__typename": "Query",
  "nested": Object {
    "name": "A",
  },
}
`;

exports[`works on the nestedFragment structure: Output 1`] = `
Object {
  "__typename": "Query",
  "listNested": Array [
    Object {
      "deeplyNested": Object {
        "name": "SECONDLEVEL",
      },
      "name": "FIRSTLEVEL",
    },
  ],
}
`;

exports[`works on the nestedNullable structure: Output 1`] = `
Object {
  "__typename": "Query",
  "nestedNullable": null,
}
`;

exports[`works on the repeatedFragment structure: Output 1`] = `
Object {
  "__typename": "Query",
  "first": Object {
    "name": "A",
  },
  "second": Object {
    "name": "A",
  },
}
`;

exports[`works on the simple structure: Output 1`] = `
Object {
  "__typename": "Query",
  "simple": "A",
}
`;
